test/1.2/errors/T_ESYNTAX_03.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
/// ERROR ESYNTAX
parameter documentation = "This is a string
with a linebreak in it";
